# rust_polymarket-collector

./: .env  CLAUDE.md  Cargo.toml
migrations/: 20260418120000_create_updown_market_type.sql  20260418120100_create_updown_market.sql  20260418120200_create_market_ticks.sql  20260418120300_create_orderbook_snapshots.sql  20260428120000_index_market_ticks_pct_ms_left.sql
src/: config.rs  db.rs  main.rs  metrics.rs
src/chainlink_client/: client.rs  error.rs  mod.rs  models.rs
src/polymarket_client/: client.rs  error.rs  mod.rs  models.rs  serde_utils.rs
src/services/: market_monitor.rs  mod.rs  polymarket_updown_service.rs  ws_orderbook.rs  ws_updown_beat.rs
src/strategies/: mod.rs  print.rs  store.rs
